Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-98651

[iOS 15] Application freezes when QDialog is executed by button clicked() signal

XMLWordPrintable

    • iOS/tvOS/watchOS
    • e56b2d7a9e (qt/qtbase/dev) e56b2d7a9e (qt/tqtc-qtbase/dev) c9dc8b9945 (qt/qtbase/6.3) d4bba108fd (qt/tqtc-qtbase/6.2) 5fcdf04628 (qt/qtbase/6.4) c9dc8b9945 (qt/tqtc-qtbase/6.3) 5fcdf04628 (qt/tqtc-qtbase/6.4) 01f3e67142 (qt/tqtc-qtbase/5.15)

      In the following code, when the messagebox is executed, the dialog doesn't appear and
      the application freezes.

      
      void MainWindow::on_pushButton_clicked()
      {
          QMessageBox::information(this,"Message", "Button A pressed");
      }
      
      

      How to reproduce
      1. Use qtbug98651.zip
      2. Press any button.

      Expected behavior:
      The message dialog appears

      Actual behavior:
      Nothing happens and the application freezes.

      Note: This works fine with iOS 14.8

        1. BlockingDialogTest.zip
          45 kB
          Tor Arne Vestbø
        2. qtbug98651.zip
          3 kB
          Nahomi Gröhn
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vestbo Tor Arne Vestbø
            nagrohn Nahomi Gröhn (Inactive)
            Votes:
            13 Vote for this issue
            Watchers:
            24 Start watching this issue

              Created:
              Updated:
              Resolved: