ndefeditor: fix dropdown menu problems

Because of QTBUG-98651 and QTBUG-97482 a QPushButton with a dropdown
menu was not working properly neither on iOS nor on Android.
This patch fixes the issue, but it's not optimal, because it re-creates
the menu every time.
Ideally we should provide QML-based GUI for the example.

Task-number: QTBUG-103949
Pick-to: 6.3 6.2
Change-Id: Icd1e00f27f5c4864a33fa7f1f7755c0e919183cb
Reviewed-by: Juha Vuolle <juha.vuolle@insta.fi>